add slider in info

--- a/app/index.html
+++ b/app/index.html
@@ -225,12 +225,36 @@
     <div class="info">
         <div class="container">
             <div class="flex-block aic info__wrap">
-                <picture class="info__img">
-                    <source type="image/webp" srcset="img/dest/vertical_warehouse.webp">
-                    <img src="img/dest/vertical_warehouse.jpg" alt="#" loading="lazy" width="420" height="640">
-                </picture>
+                <div class="wrap-tns-slider-info">
+                    <div class="tns-slider-info">
+                        <div class="wrap-info__img">
+                            <picture class="info__img">
+                                <source type="image/webp" srcset="img/dest/vertical_warehouse.webp">
+                                <img src="img/dest/vertical_warehouse.jpg" alt="#" loading="lazy" width="300" height="485">
+                            </picture>
+                        </div>
+                        <div class="wrap-info__img">
+                            <picture class="info__img">
+                                <source type="image/webp" srcset="img/dest/vertical_warehouse1.webp">
+                                <img src="img/dest/vertical_warehouse1.jpg" alt="#" loading="lazy" width="300" height="485">
+                            </picture>
+                        </div>
+                        <div class="wrap-info__img">
+                            <picture class="info__img">
+                                <source type="image/webp" srcset="img/dest/electricbox.webp">
+                                <img src="img/dest/electricbox.jpg" alt="#" loading="lazy" width="300" height="485">
+                            </picture>
+                        </div>
+                        <div class="wrap-info__img">
+                            <picture class="info__img">
+                                <source type="image/webp" srcset="img/dest/camera.webp">
+                                <img src="img/dest/camera.jpg" alt="#" loading="lazy" width="300" height="485">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
                 <div class="info__text">
-                    <h2 class="info__header">Наш частотные направления</h2>
+                    <h2 class="info__header">Наши частотные направления</h2>
                     <ul class="info__list">
                         <li class="info__list-item">
                             <div class="info__wrapIcon">
@@ -850,8 +874,8 @@
         <div class="container">
             <div class="flex-block aic contact__wrap">
                 <div class="contact__header">
-                    <h2 class="contact__headerH2">Написать нам</h2>
-                    <h3 class="contact__headerH3">Lorem ipsum dolor sit amet, consecrated advising elite.</h3>
+                    <h2 class="contact__headerH2">Свяжитесь с нами</h2>
+                    <h3 class="contact__headerH3">Пишите нам, мы ответим максимально быстро.</h3>
                 </div>
 
                 <form action="#" class="contact__form" title="Мы рады с Вами пообщаться!)" method="post">
