animation info block

--- a/app/index.html
+++ b/app/index.html
@@ -224,31 +224,39 @@
     <div class="info" id="info_anim_list">
         <div class="container">
             <div class="flex-block aic info__wrap">
-                <div class="wrap-tns-slider-info">
-                    <div class="tns-slider-info">
-                        <div class="wrap-info__img">
-                            <picture class="info__img">
-                                <source type="image/webp" srcset="img/dest/vertical_warehouse.webp">
-                                <img src="img/dest/vertical_warehouse.jpg" alt="#" loading="lazy" width="300" height="485">
-                            </picture>
-                        </div>
-                        <div class="wrap-info__img">
-                            <picture class="info__img">
-                                <source type="image/webp" srcset="img/dest/vertical_warehouse1.webp">
-                                <img src="img/dest/vertical_warehouse1.jpg" alt="#" loading="lazy" width="300" height="485">
-                            </picture>
-                        </div>
-                        <div class="wrap-info__img">
-                            <picture class="info__img">
-                                <source type="image/webp" srcset="img/dest/electricbox.webp">
-                                <img src="img/dest/electricbox.jpg" alt="#" loading="lazy" width="300" height="485">
-                            </picture>
-                        </div>
-                        <div class="wrap-info__img">
-                            <picture class="info__img">
-                                <source type="image/webp" srcset="img/dest/camera.webp">
-                                <img src="img/dest/camera.jpg" alt="#" loading="lazy" width="300" height="485">
-                            </picture>
+                <div class="wrap-for-animation">
+                    <div class="anim1-element"></div>
+                    <div class="anim2-element"></div>
+                    <div class="anim3-element"></div>
+                    <div class="anim4-element"></div>
+                    <div class="wrap-tns-slider-info">
+                        <div class="tns-slider-info">
+                            <div class="wrap-info__img">
+                                <picture class="info__img">
+                                    <source type="image/webp" srcset="img/dest/vertical_warehouse.webp">
+                                    <img src="img/dest/vertical_warehouse.jpg" alt="#" loading="lazy" width="300"
+                                         height="485">
+                                </picture>
+                            </div>
+                            <div class="wrap-info__img">
+                                <picture class="info__img">
+                                    <source type="image/webp" srcset="img/dest/vertical_warehouse1.webp">
+                                    <img src="img/dest/vertical_warehouse1.jpg" alt="#" loading="lazy" width="300"
+                                         height="485">
+                                </picture>
+                            </div>
+                            <div class="wrap-info__img">
+                                <picture class="info__img">
+                                    <source type="image/webp" srcset="img/dest/electricbox.webp">
+                                    <img src="img/dest/electricbox.jpg" alt="#" loading="lazy" width="300" height="485">
+                                </picture>
+                            </div>
+                            <div class="wrap-info__img">
+                                <picture class="info__img">
+                                    <source type="image/webp" srcset="img/dest/camera.webp">
+                                    <img src="img/dest/camera.jpg" alt="#" loading="lazy" width="300" height="485">
+                                </picture>
+                            </div>
                         </div>
                     </div>
                 </div>
