--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <title>ООО "КомплектСнаб</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <!--<link rel="stylesheet" href="css/critical.css">-->
     <link rel="stylesheet" href="css/app.min.css">
 </head>
 <body>
