animation info block fly box

--- a/app/index.html
+++ b/app/index.html
@@ -442,11 +442,36 @@
                 </div>
                 <div class="info__text">
                     <h2 class="info__header">Ассортимент</h2>
-                    <p class="info__p anim_info_text">В каталоге более 8 000 наименований товаров, их наличие на складе всегда можно
+                    <p class="info__p anim_info_text">В каталоге более 8 000 наименований товаров, их наличие на складе
+                        всегда можно
                         узнать у менеджера. Обновление цен и остатков происходит мгновенно, в рабочее время.</p>
                     <p class="info__p anim_info_text">Вся продукция имеет соответствующие сертификаты и гарантии.</p>
                 </div>
             </div>
+        </div>
+        <div class="wrap_animateBlockWithText">
+            <ul class="animateBlockWithText__list">
+                <li class="animateBlockWithText__item item1">
+                    <p class="animateBlockWithText__text">
+                        Комплексное
+                    </p>
+                </li>
+                <li class="animateBlockWithText__item item2">
+                    <p class="animateBlockWithText__text">
+                        Снабжение
+                    </p>
+                </li>
+                <li class="animateBlockWithText__item item3">
+                    <p class="animateBlockWithText__text">
+                        Комплексное
+                    </p>
+                </li>
+                <li class="animateBlockWithText__item item4">
+                    <p class="animateBlockWithText__text">
+                        Снабжение
+                    </p>
+                </li>
+            </ul>
         </div>
     </div>
     <!-- Бегущая строка -->
