polyfil for firefox

--- a/app/index.html
+++ b/app/index.html
@@ -463,12 +463,12 @@
                 </li>
                 <li class="animateBlockWithText__item item3">
                     <p class="animateBlockWithText__text">
-                        Снабжение
+                        Бизнеса
                     </p>
                 </li>
                 <li class="animateBlockWithText__item item4">
                     <p class="animateBlockWithText__text">
-                        Комплексное
+                        Вашего
                     </p>
                 </li>
             </ul>
