hiden eye mobile version

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <title>ООО "КомплектСнаб</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-    <!--<link rel="stylesheet" href="css/critical.css">-->
+    <!--<link rel="stylesheet" href="css/critical.css?v=0.0.2">-->
     <link rel="stylesheet" href="css/app.min.css">
 </head>
 <body>
@@ -107,32 +107,31 @@
 
                 <ul class="social__list">
                     <li class="social__item">
-                        <a href="https://vk.com/html_css_js_php_postgresql" class="social__link" target="_blank"
-                           rel="noreferrer">
+                        <a href="https://vk.com/html_css_js_php_postgresql" class="social__link" target="_blank">
                             <svg class="icon">
                                 <use xlink:href="#icon-vk"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="#" class="social__link" target="_blank" rel="noreferrer">
+                        <a href="https://www.facebook.com/kipreew" class="social__link" target="_blank">
                             <svg class="icon">
                                 <use xlink:href="#icon-facebook2"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="tg://msg?text=@denisdeveloper" class="social__link" rel="noreferrer">
+                        <a href="tg://msg?text=@9288406792" class="social__link">
                             <svg class="icon">
                                 <use xlink:href="#icon-telegram"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="#" class="social__link" target="_blank" rel="noreferrer">
+                        <a href="https://www.instagram.com/_st_as/" class="social__link" target="_blank">
                             <svg class="icon">
-                                <use xlink:href="#icon-twitter"/>
+                                <use xlink:href="#icon-instagram"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="skype:belocerkovecden" class="social__link" target="_blank" rel="noreferrer">
+                        <a href="skype:kipreewsw" class="social__link" target="_blank">
                             <svg class="icon">
                                 <use xlink:href="#icon-skype"/>
                             </svg>
@@ -1017,32 +1016,31 @@
             <div class="social">
                 <ul class="social__list">
                     <li class="social__item">
-                        <a href="https://vk.com/html_css_js_php_postgresql" class="social__link" target="_blank"
-                           rel="noreferrer">
+                        <a href="https://vk.com/html_css_js_php_postgresql" class="social__link" target="_blank">
                             <svg class="icon">
                                 <use xlink:href="#icon-vk"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="#" class="social__link" rel="noreferrer">
+                        <a href="https://www.facebook.com/kipreew" class="social__link">
                             <svg class="icon">
                                 <use xlink:href="#icon-facebook2"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="tg://msg?text=@denisdeveloper" class="social__link" target="_blank" rel="noreferrer">
+                        <a href="tg://msg?text=@9288406792" class="social__link" target="_blank">
                             <svg class="icon">
                                 <use xlink:href="#icon-telegram"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="#" class="social__link" target="_blank" rel="noreferrer">
+                        <a href="https://www.instagram.com/_st_as/" class="social__link" target="_blank">
                             <svg class="icon">
-                                <use xlink:href="#icon-twitter"/>
+                                <use xlink:href="#icon-instagram"/>
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="skype:belocerkovecden" class="social__link" target="_blank" rel="noreferrer">
+                        <a href="skype:kipreewsw" class="social__link" target="_blank">
                             <svg class="icon">
                                 <use xlink:href="#icon-skype"/>
                             </svg>
@@ -1081,8 +1079,10 @@
         <symbol id="icon-telegram" viewBox="0 0 32 32">
             <path d="M16 0c-8.838 0-16 7.162-16 16s7.162 16 16 16 16-7.163 16-16-7.163-16-16-16zM23.863 10.969l-2.625 12.369c-0.181 0.881-0.712 1.087-1.45 0.681l-4-2.956-1.919 1.869c-0.225 0.219-0.4 0.4-0.8 0.4-0.519 0-0.431-0.194-0.606-0.688l-1.363-4.475-3.956-1.231c-0.856-0.262-0.862-0.85 0.194-1.269l15.412-5.95c0.7-0.319 1.381 0.169 1.113 1.25z"></path>
         </symbol>
-        <symbol id="icon-twitter" viewBox="0 0 32 32">
-            <path d="M32 7.075c-1.175 0.525-2.444 0.875-3.769 1.031 1.356-0.813 2.394-2.1 2.887-3.631-1.269 0.75-2.675 1.3-4.169 1.594-1.2-1.275-2.906-2.069-4.794-2.069-3.625 0-6.563 2.938-6.563 6.563 0 0.512 0.056 1.012 0.169 1.494-5.456-0.275-10.294-2.888-13.531-6.862-0.563 0.969-0.887 2.1-0.887 3.3 0 2.275 1.156 4.287 2.919 5.463-1.075-0.031-2.087-0.331-2.975-0.819 0 0.025 0 0.056 0 0.081 0 3.181 2.263 5.838 5.269 6.437-0.55 0.15-1.131 0.231-1.731 0.231-0.425 0-0.831-0.044-1.237-0.119 0.838 2.606 3.263 4.506 6.131 4.563-2.25 1.762-5.075 2.813-8.156 2.813-0.531 0-1.050-0.031-1.569-0.094 2.913 1.869 6.362 2.95 10.069 2.95 12.075 0 18.681-10.006 18.681-18.681 0-0.287-0.006-0.569-0.019-0.85 1.281-0.919 2.394-2.075 3.275-3.394z"></path>
+        <symbol id="icon-instagram" viewBox="0 0 32 32">
+            <path d="M16 2.881c4.275 0 4.781 0.019 6.462 0.094 1.563 0.069 2.406 0.331 2.969 0.55 0.744 0.288 1.281 0.638 1.837 1.194 0.563 0.563 0.906 1.094 1.2 1.838 0.219 0.563 0.481 1.412 0.55 2.969 0.075 1.688 0.094 2.194 0.094 6.463s-0.019 4.781-0.094 6.463c-0.069 1.563-0.331 2.406-0.55 2.969-0.288 0.744-0.637 1.281-1.194 1.837-0.563 0.563-1.094 0.906-1.837 1.2-0.563 0.219-1.413 0.481-2.969 0.55-1.688 0.075-2.194 0.094-6.463 0.094s-4.781-0.019-6.463-0.094c-1.563-0.069-2.406-0.331-2.969-0.55-0.744-0.288-1.281-0.637-1.838-1.194-0.563-0.563-0.906-1.094-1.2-1.837-0.219-0.563-0.481-1.413-0.55-2.969-0.075-1.688-0.094-2.194-0.094-6.463s0.019-4.781 0.094-6.463c0.069-1.563 0.331-2.406 0.55-2.969 0.288-0.744 0.638-1.281 1.194-1.838 0.563-0.563 1.094-0.906 1.838-1.2 0.563-0.219 1.412-0.481 2.969-0.55 1.681-0.075 2.188-0.094 6.463-0.094zM16 0c-4.344 0-4.887 0.019-6.594 0.094-1.7 0.075-2.869 0.35-3.881 0.744-1.056 0.412-1.95 0.956-2.837 1.85-0.894 0.888-1.438 1.781-1.85 2.831-0.394 1.019-0.669 2.181-0.744 3.881-0.075 1.713-0.094 2.256-0.094 6.6s0.019 4.887 0.094 6.594c0.075 1.7 0.35 2.869 0.744 3.881 0.413 1.056 0.956 1.95 1.85 2.837 0.887 0.887 1.781 1.438 2.831 1.844 1.019 0.394 2.181 0.669 3.881 0.744 1.706 0.075 2.25 0.094 6.594 0.094s4.888-0.019 6.594-0.094c1.7-0.075 2.869-0.35 3.881-0.744 1.050-0.406 1.944-0.956 2.831-1.844s1.438-1.781 1.844-2.831c0.394-1.019 0.669-2.181 0.744-3.881 0.075-1.706 0.094-2.25 0.094-6.594s-0.019-4.887-0.094-6.594c-0.075-1.7-0.35-2.869-0.744-3.881-0.394-1.063-0.938-1.956-1.831-2.844-0.887-0.887-1.781-1.438-2.831-1.844-1.019-0.394-2.181-0.669-3.881-0.744-1.712-0.081-2.256-0.1-6.6-0.1v0z"></path>
+            <path d="M16 7.781c-4.537 0-8.219 3.681-8.219 8.219s3.681 8.219 8.219 8.219 8.219-3.681 8.219-8.219c0-4.537-3.681-8.219-8.219-8.219zM16 21.331c-2.944 0-5.331-2.387-5.331-5.331s2.387-5.331 5.331-5.331c2.944 0 5.331 2.387 5.331 5.331s-2.387 5.331-5.331 5.331z"></path>
+            <path d="M26.462 7.456c0 1.060-0.859 1.919-1.919 1.919s-1.919-0.859-1.919-1.919c0-1.060 0.859-1.919 1.919-1.919s1.919 0.859 1.919 1.919z"></path>
         </symbol>
         <symbol id="icon-vk" viewBox="0 0 32 32">
             <path d="M29 0h-26c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h26c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3zM25.919 22.4l-2.925 0.044c0 0-0.631 0.125-1.456-0.444-1.094-0.75-2.125-2.706-2.931-2.45-0.813 0.256-0.788 2.012-0.788 2.012s0.006 0.375-0.181 0.575c-0.2 0.219-0.6 0.262-0.6 0.262h-1.306c0 0-2.888 0.175-5.431-2.475-2.775-2.887-5.225-8.619-5.225-8.619s-0.144-0.375 0.013-0.556c0.175-0.206 0.644-0.219 0.644-0.219l3.131-0.019c0 0 0.294 0.050 0.506 0.206 0.175 0.125 0.269 0.369 0.269 0.369s0.506 1.281 1.175 2.438c1.306 2.256 1.919 2.75 2.362 2.513 0.644-0.35 0.45-3.194 0.45-3.194s0.012-1.031-0.325-1.488c-0.262-0.356-0.756-0.463-0.969-0.488-0.175-0.025 0.113-0.431 0.488-0.619 0.563-0.275 1.556-0.294 2.731-0.281 0.913 0.006 1.181 0.069 1.538 0.15 1.081 0.262 0.712 1.269 0.712 3.681 0 0.775-0.137 1.863 0.419 2.219 0.238 0.156 0.825 0.025 2.294-2.469 0.694-1.181 1.219-2.569 1.219-2.569s0.113-0.25 0.288-0.356c0.181-0.106 0.425-0.075 0.425-0.075l3.294-0.019c0 0 0.988-0.119 1.15 0.331 0.169 0.469-0.369 1.563-1.712 3.356-2.206 2.944-2.456 2.669-0.619 4.369 1.75 1.625 2.113 2.419 2.175 2.519 0.712 1.2-0.813 1.294-0.813 1.294z"></path>
@@ -1175,7 +1175,7 @@
         }
     }, 5000)
 </script>
-<!--<link rel="stylesheet" href="css/async.css">-->
-<script src="js/app.min.js"></script>
+<!--<link rel="stylesheet" href="css/async.css?v=0.0.2">-->
+<script src="js/app.min.js?v=0.0.2"></script>
 </body>
 </html>
