--- a/app/blog.html
+++ b/app/blog.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Официальный сайт-визитка, ООО 'КомплектСнаб', - продавец в сфере комплексных
+    поставок электротехнической продукции">
+    <title>ООО "КомплектСнаб</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <!--<link rel="stylesheet" href="css/critical.css?v=0.0.2">-->
+    <link rel="stylesheet" href="css/app.min.css">
 </head>
 <body>
-
+<div class="wrap">
+    <div class="anim">
+        <picture class="wrap__img-user">
+            <source type="image/webp" srcset="img/dest/blur.webp">
+            <img src="img/dest/blur.jpg" alt="avatar3" loading="lazy">
+        </picture>
+        <picture class="wrap__img-user">
+            <source type="image/webp" srcset="img/dest/back.webp">
+            <img src="img/dest/back.png" alt="avatar3" loading="lazy">
+        </picture>
+        <picture class="wrap__img-user">
+            <source type="image/webp" srcset="img/dest/woman.webp">
+            <img src="img/dest/woman.png" alt="avatar3" loading="lazy">
+        </picture>
+        <picture class="wrap__img-user">
+            <source type="image/webp" srcset="img/dest/smoke.webp">
+            <img src="img/dest/smoke.png" alt="avatar3" loading="lazy">
+        </picture>
+    </div>
+</div>
+<script src="js/app.min.js?v=0.0.2"></script>
 </body>
 </html>
